# dgi_llm

./: Makefile  README.md  main.py  pyproject.toml
config/: .env.example  deploy-0.env
docs/: MODEL_DOWNLOAD.md  Qwen3-0.6B-intro.txt  Qwen3-32B-arch-atb.txt  ref.md
python/: README.md  drun.sh  r.sh
scripts/: README.md  docker-start.sh  run-debug.sh  run-local-mac.sh  run-local.sh
