[project]
name = "dgi-llm"
version = "0.1.0"
description = "LLM inference platform optimized for Ascend NPU hardware"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "safetensors",
    "huggingface_hub",
    "tokenizers",
    "transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/dgi_llm"]

[tool.uv]
dev-dependencies = []
